make create model revision request entities optional
